--- a/src/app/partials/landing/default-top-nav/default-top-nav.html
+++ b/src/app/partials/landing/default-top-nav/default-top-nav.html
@@ -12,13 +12,10 @@
       <p-button
         variant="outlined"
         label="Inicia sesión"
-        class="p-button-outlined text-primary border-primary hover:bg-primary/10"
       ></p-button>
-      <button
-        pButton
+      <p-button
         label="Regístrate"
-        class="p-button-primary bg-primary text-white border-none hover:bg-primary-emphasis"
-      ></button>
+      ></p-button>
     </div>
   </nav>
 </header>
