feat: add operations layout and navigation components, integrate ng-icons and update landing page

--- a/src/app/pages/landing-page/landing-page.html
+++ b/src/app/pages/landing-page/landing-page.html
@@ -13,9 +13,9 @@
     </div>
     <div class="md:w-1/2">
       <img
-        src="assets/mockup-deliveries.png"
+        src="/landing_illus.png"
         alt="Mockup del sistema"
-        class="rounded-lg shadow-lg w-full max-w-lg mx-auto"
+        class="w-full max-w-lg mx-auto"
       />
     </div>
   </div>
