--- a/src/app/pages/about-page/about-page.html
+++ b/src/app/pages/about-page/about-page.html
@@ -1,1 +1,32 @@
-<p>about-page works!</p>
+<div class="container mx-auto px-6 py-12">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias dolor nesciunt cupiditate! Accusantium doloremque, vitae enim quae quam commodi maiores quo molestiae veniam, eos dolor, in optio natus laboriosam?</p>
+
+  <br />
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias dolor nesciunt cupiditate! Accusantium doloremque, vitae enim quae quam commodi maiores quo molestiae veniam, eos dolor, in optio natus laboriosam?</p>
+
+  <br />
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias dolor nesciunt cupiditate! Accusantium doloremque, vitae enim quae quam commodi maiores quo molestiae veniam, eos dolor, in optio natus laboriosam?</p>
+
+  <br />
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias dolor nesciunt cupiditate! Accusantium doloremque, vitae enim quae quam commodi maiores quo molestiae veniam, eos dolor, in optio natus laboriosam?</p>
+
+  <br />
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias dolor nesciunt cupiditate! Accusantium doloremque, vitae enim quae quam commodi maiores quo molestiae veniam, eos dolor, in optio natus laboriosam?</p>
+
+  <br />
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias dolor nesciunt cupiditate! Accusantium doloremque, vitae enim quae quam commodi maiores quo molestiae veniam, eos dolor, in optio natus laboriosam?</p>
+
+  <br />
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias dolor nesciunt cupiditate! Accusantium doloremque, vitae enim quae quam commodi maiores quo molestiae veniam, eos dolor, in optio natus laboriosam?</p>
+
+  <br />
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias dolor nesciunt cupiditate! Accusantium doloremque, vitae enim quae quam commodi maiores quo molestiae veniam, eos dolor, in optio natus laboriosam?</p>
+
+  <br />
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias dolor nesciunt cupiditate! Accusantium doloremque, vitae enim quae quam commodi maiores quo molestiae veniam, eos dolor, in optio natus laboriosam?</p>
+
+  <br />
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat molestias dolor nesciunt cupiditate! Accusantium doloremque, vitae enim quae quam commodi maiores quo molestiae veniam, eos dolor, in optio natus laboriosam?</p>
+
+  <br />
+</div>
