--- a/src/app/layouts/private-ops-layout/private-ops-layout.html
+++ b/src/app/layouts/private-ops-layout/private-ops-layout.html
@@ -2,6 +2,8 @@
   class="flex flex-col min-h-screen bg-surface-50 dark:bg-surface-900 text-surface-900 dark:text-surface-100"
 >
   <app-ops-top-nav></app-ops-top-nav>
-  <router-outlet />
+  <div class="container mx-auto px-6 py-8">
+    <router-outlet />
+  </div>
   <!-- <app-default-footer></app-default-footer> -->
 </div>
