feat: Update admin routing and layout, enhance navigation with login link

--- a/src/app/partials/landing/default-top-nav/default-top-nav.html
+++ b/src/app/partials/landing/default-top-nav/default-top-nav.html
@@ -19,7 +19,7 @@
       </ng-template>
     </p-menubar>
     <div class="space-x-4">
-      <p-button variant="outlined" label="Inicia sesión"></p-button>
+      <p-button variant="outlined" label="Inicia sesión" routerLink="/login"></p-button>
     </div>
   </nav>
 </header>
