--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,14 @@
   --font-mono: 'JetBrains Mono', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace; 
 }
 
+@layer base {
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
+  }
+}
+
+
 .p-tablist-tab-list {
   background-color: transparent !important;
 }
